2005-12-06  John W. Eaton  <jwe@octave.org>

	* miscellaneous/dir.m: Return Nx1 instead of 1xN struct array.

2005-12-05  John W. Eaton  <jwe@octave.org>

	* plot/axis.m: Add "## PKG_ADD: mark_as_command axis" line.

2005-12-02  John W. Eaton  <jwe@octave.org>

	* miscellaneous/fileattrib.m: New function.

2005-12-01  John W. Eaton  <jwe@octave.org>

	* general/columns.m: Use size (x, 2) instead of [nr, nc] = size (x).
	* general/rows.m: Use size (x, 1) instead of [nr, nc] = size (x).
	From William Poetra Yoga Hadisoeseno <williampoetra@yahoo.com>.

2005-11-30  John W. Eaton  <jwe@octave.org>

	* linear-algebra/krylov.m: Format doc string.
	From Jorge Barros de Abreu <ficmatin01@solar.com.br>.

2005-11-23  William Poetra Yoga Hadisoeseno  <williampoetra@yahoo.com>

	* general/blkdiag.m: Import from octave-forge.
	Ignore empty matrices in the input.  Add tests.

	* general/isequal.m, general/isequalwithequalnans.m:
	New wrapper scripts for general/__isequal__.m.
	* general/__isequal__.m: Rename from general/isequal.m.
	New arg, nans_compare_equal.

2005-11-29  John W. Eaton  <jwe@octave.org>

	* miscellaneous/ver.m: Use new uname built-in function instead of
	calling system.  Only append octave_forge_string if
	OCTAVE_FORGE_VERSION exists.  Use puts instead of disp.
	Call license instead of hard-coding license info here.

	* miscellaneous/license.m: Use persistent instead of global for
	__octave_licenses__.  Use puts instad of disp.
	Use getuid and getpwuid instead of calling unix ("id -un").
	If nargout = 1, return license info instead of printing usage message.

2005-11-29  William Poetra Yoga Hadisoeseno  <williampoetra@gmail.com>

	* miscellaneous/ver.m: New file.
	* miscellaneous/license.m: New file.

2005-11-22  John W. Eaton  <jwe@octave.org>

	* plot/axis.m: Use %.16g instead of just %g to format ranges for
	gnuplot set command.

2005-11-15  John W. Eaton  <jwe@octave.org>

	* general/shiftdim.m: Doc fix.

2005-11-07  Keith Goodman  <kwgoodman@gmail.com>
